testsuite/tests/properties/invalid_prop_def/test.out
== correct.lkt ==
Code generation was successful

== not_type.lkt ==
not_type.lkt:4:25: error: type expected, got the builtin value <Var Self at ???>
4 |     @export fun prop(a: node): Int = 0
  |                         ^^^^


== reserved.lkt ==
reserved.lkt:4:22: error: Arguments cannot have reserved names (node, bound_env)
4 |     @export fun prop(node: Int, lex_env: Int): Int = node + lex_env
  |                      ^^^^


lkt_compile: Done
